loris@cersloundgroup.org, or visit them at
http://www.cerlsoundgroup.org/Loris

Please send bug reports to loris@cerlsoundgroup.org

Loris is free software. Please see the file COPYING for details.

Loris is Copyright (c) 1999-2007 by Kelly Fitz and Lippold Haken.


History of visible changes, organized by relase number:

-------------------------------------------------------
changes since 1.5.1 release:

- Analyzer always constructs amplitude and fundamental
frequency envelopes during analysis (cannot disable).

- fixed broken SpcFile::addPartial members in Python 
interface.

- improved resampling in the Python interface, now
have options for sparse (default) and dense (good 
for use with CNMAT sinusoids~ external for Max/MSP)
resampling.

-------------------------------------------------------
changes since 1.5 release:

- updated command-line analysis utility (loris-analyze)
to estimate the fundamental frequency reference envelope
during analysis when distilling or sifting.

- updated command-line analysis utility (loris-analyze)
to provide a choice between spectral residue (-bwresidue)
and sinusoidal convergence (mixed derivative of phase)
(-bwconvergence) algorithms for computing bandwidth 
envelopes.

- changed parameter for specifying convergence bandwidth
tolerance from percent (0 to 100) to absolute (0 to 1)
to be more intuitive and consistent with the rest of
Loris (which doesn't use percent anywhere). Affects
C++, Python, and C interfaces. For now, a value greater
than one is scaled down by 1/100 with a notification of
the change.

- made Distiller, Sieve, and Collator default fade and
gap (silent) times consistent, and made those defaults
consistent in all contexts (Python, C++, and the 
command line utilities). 

- added bandwidth scaling option to synthesis command
line utility (good for turning off bandwidth-enhanced
synthesis, scale by 0).

-------------------------------------------------------
changes since 1.4 release:
